--- a/xsolution/src/styles/main.css
+++ b/xsolution/src/styles/main.css
@@ -1,3 +1,4 @@
+@import 'bootstrap/dist/css/bootstrap.min.css';
 @import "./reset.css";
 @import "./fonts/fonts.css";
 
@@ -46,23 +47,9 @@ html, body {
     min-height: 100vh;
 }
 
-.text-center {
-    text-align: center;
-}
-
 h2 {
     font-size: 30px;
     font-weight: 900;
-}
-
-.container {
-    margin: 0 auto;
-    padding: 0 15px;
-    max-width: 1140px;
-}
-
-.section {
-    padding: 70px 0;
 }
 
 .form-block {
@@ -78,30 +65,209 @@ h2 {
     margin-bottom: 20px;
 }
 
-/* padding */
-.p-1, .pt-1, .pb-1 {
-    padding: 10px;
-}
-.p-2, .pt-2, .pb-2 {
-    padding: 20px;
-}
-.p-3, .pt-3, .pb-3 {
-    padding: 30px;
-}
-.p-4, .pt-4, .pb-4 {
-    padding: 40px;
-}
-.p-5, .pt-5, .pb-5 {
-    padding: 50px;
-}
-
-
-/* padding */
-
-/* margin */
-
-/* margin */
 /* Общие стили */
+
+.btn-warning {
+    background: #ffdd2d;
+    height: 56px;
+    border-radius: 15px;
+    border: none;
+}
+
+/* Кастомные инпуты */
+.custom-input-main {
+    background: #ecf1f7;
+    box-shadow: none!important;
+    border: none;
+    border-radius: 10px;
+}
+
+label.form-label::after, select.custom-input-main:focus + label.form-label::after {
+    background: #ecf1f7!important;
+}
+
+.custom-input-main:focus + label.form-label::after {
+    background: #fff!important;
+}
+
+.custom-input-main:focus {
+    border: 1px solid grey;
+    border-radius: 10px;
+}
+
+.form-control.is-invalid {
+    border: 1px solid red;
+    border-radius: 10px;
+}
+
+.form-control.is-valid {
+    border: 1px solid green;
+    border-radius: 10px;
+}
+
+/* Кастомные инпуты */
+/* Прогрессбар */
+.progress {
+    height: 8px;
+}
+
+div.progress-bar {
+    background: rgb(0, 185, 45)!important;
+}
+
+.percent-complete {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.complete {
+    font-size: 14px;
+    color: #a2a3a3;
+}
+
+.percent {
+    font-weight: 900;
+    font-size: 24px;
+}
+/* Прогрессбар */
+
+
+/* Кастомные радиокнопки */
+span.main-radio-span {
+    display: flex;
+    flex-direction: column;
+    
+  }
+  
+  label {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    border: 1px solid #d9d9da;
+    padding: 10px 20px;
+  }
+  
+  .main-radio-span-one {
+      border-radius: 10px 10px 0 0;
+      border-bottom: none!important;
+  }
+  
+  .main-radio-span-two {
+      border-radius: 0 0 10px 10px;
+  }
+  
+  /* Стили для неотмеченных радиокнопок */
+  input[type="radio"] {
+      /* Убираем стандартные бордеры */
+      border: none;
+      /* Задаем серый цвет фона */
+      background-color: #ecf1f7;
+      /* Задаем размеры и форму кнопки (можно настраивать по желанию) */
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      /* Убираем стандартный внутренний отступ */
+      padding: 0;
+      /* Скрываем оригинальную радиокнопку */
+      appearance: none;
+      -webkit-appearance: none;
+      transition: all .6s ease;
+    }
+    
+    /* Стили для отмеченных радиокнопок */
+    input[type="radio"]:checked {
+      /* Добавляем желтый бордер */
+      background: #333;
+      border: 4px solid #ffdd2d;
+      
+      transition: background .6s ease;
+    }
+    
+    /* Скрытие стандартной внутренней точки в радиокнопке */
+    input[type="radio"]::before {
+      content: "";
+      display: block;
+      /* Задаем черный цвет точки */
+      background-color: #333;
+    }
+    
+    /* Скрытие стандартного внешнего кружка радиокнопки */
+    input[type="radio"]::after {
+      content: none;
+    }
+  /* Кастомные радиокнопки */
+
+ul.nav.nav-tabs {
+    border: none;
+}
+
+ul.nav.nav-tabs li.nav-item button{
+    border: 1px solid #DADCDC;
+    border-radius: 5px;
+    color: #333;
+}
+
+ul.nav.nav-tabs li.nav-item button:hover {
+    background: #f0f0f0;
+}
+
+ul.nav.nav-tabs li.nav-item button.active{
+    border: 1px solid #ffdd2d;
+    background: #f6f7f8;
+    border-radius: 5px;
+}
+/* Скрываем стандартную кнопку */
+
+
+ul.order-list li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+}
+
+ul.order-list li:hover {
+    background: #f0f0f0;
+}
+
+ul.order-list li div {
+    
+}
+
+ul.order-list li a {
+    color: #0d6efd!important;
+    cursor: pointer!important;
+}
+/* Переключатель на тудушке */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Адаптация */
@@ -132,3 +298,4 @@ h2 {
     
   }
 /* Адаптация */
+
