--- a/xsolution/src/components/header/Header.css
+++ b/xsolution/src/components/header/Header.css
@@ -7,6 +7,9 @@
     font-size: 14px;
     color: #7c7d7d;
     position: relative;
+    -webkit-box-shadow: 0px 5px 48px 11px rgba(34, 60, 80, 0.2);
+    -moz-box-shadow: 0px 5px 48px 11px rgba(34, 60, 80, 0.2);
+    box-shadow: 0px 5px 30px 11px rgba(107, 107, 107, 0.1);
 }
 
 .nav-wrapper {
