--- a/xsolution/src/styles/main.css
+++ b/xsolution/src/styles/main.css
@@ -24,13 +24,15 @@
 
 /* Общие стили */
 #root {
-    min-height: 100vh;
+    height: 100vh;
+    overflow-y: scroll;
 }
 
 .app {
     height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
 }
 
 ::selection {
@@ -44,12 +46,32 @@ html, body {
     font-family: 'Play', sans-serif!important;
     background-color: var(--page-bg);
     color: var(--text-color);
-    min-height: 100vh;
+    height: 100vh;
 }
 
 h2 {
     font-size: 30px;
     font-weight: 900;
+}
+
+h3 {
+    font-size: 26px;
+    font-weight: 900;
+}
+
+h4 {
+    font-size: 22px;
+    font-weight: 700;
+}
+
+h5 {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+h6 {
+    font-size: 14px;
+    font-weight: 700;
 }
 
 .form-block {
@@ -140,63 +162,63 @@ span.main-radio-span {
     
   }
   
-  label {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row-reverse;
-    border: 1px solid #d9d9da;
-    padding: 10px 20px;
-  }
-  
-  .main-radio-span-one {
-      border-radius: 10px 10px 0 0;
-      border-bottom: none!important;
-  }
-  
-  .main-radio-span-two {
-      border-radius: 0 0 10px 10px;
-  }
+label {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+  border: 1px solid #d9d9da;
+  padding: 10px 20px;
+}
+
+.main-radio-span-one {
+    border-radius: 10px 10px 0 0;
+    border-bottom: none!important;
+}
+
+.main-radio-span-two {
+    border-radius: 0 0 10px 10px;
+}
   
   /* Стили для неотмеченных радиокнопок */
-  input[type="radio"] {
-      /* Убираем стандартные бордеры */
-      border: none;
-      /* Задаем серый цвет фона */
-      background-color: #ecf1f7;
-      /* Задаем размеры и форму кнопки (можно настраивать по желанию) */
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      /* Убираем стандартный внутренний отступ */
-      padding: 0;
-      /* Скрываем оригинальную радиокнопку */
-      appearance: none;
-      -webkit-appearance: none;
-      transition: all .6s ease;
-    }
-    
-    /* Стили для отмеченных радиокнопок */
-    input[type="radio"]:checked {
-      /* Добавляем желтый бордер */
-      background: #333;
-      border: 4px solid #ffdd2d;
-      
-      transition: background .6s ease;
-    }
-    
-    /* Скрытие стандартной внутренней точки в радиокнопке */
-    input[type="radio"]::before {
-      content: "";
-      display: block;
-      /* Задаем черный цвет точки */
-      background-color: #333;
-    }
-    
-    /* Скрытие стандартного внешнего кружка радиокнопки */
-    input[type="radio"]::after {
-      content: none;
-    }
-  /* Кастомные радиокнопки */
+input[type="radio"] {
+  /* Убираем стандартные бордеры */
+  border: none;
+  /* Задаем серый цвет фона */
+  background-color: #ecf1f7;
+  /* Задаем размеры и форму кнопки (можно настраивать по желанию) */
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  /* Убираем стандартный внутренний отступ */
+  padding: 0;
+  /* Скрываем оригинальную радиокнопку */
+  appearance: none;
+  -webkit-appearance: none;
+  transition: all .6s ease;
+}
+
+/* Стили для отмеченных радиокнопок */
+input[type="radio"]:checked {
+  /* Добавляем желтый бордер */
+  background: #333;
+  border: 4px solid #ffdd2d;
+  
+  transition: background .6s ease;
+}
+
+/* Скрытие стандартной внутренней точки в радиокнопке */
+input[type="radio"]::before {
+  content: "";
+  display: block;
+  /* Задаем черный цвет точки */
+  background-color: #333;
+}
+
+/* Скрытие стандартного внешнего кружка радиокнопки */
+input[type="radio"]::after {
+  content: none;
+}
+/* Кастомные радиокнопки */
 
 ul.nav.nav-tabs {
     border: none;
@@ -219,26 +241,102 @@ ul.nav.nav-tabs li.nav-item button.active{
 }
 /* Скрываем стандартную кнопку */
 
+ul.order-list {
+    padding-left: 0;
+}
 
 ul.order-list li {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+    padding: 20px 15px;
+    transition: all .3s;
 }
 
 ul.order-list li:hover {
     background: #f0f0f0;
+    border-radius: 10px;
+    transition: all ease .3s;
 }
 
 ul.order-list li div {
-    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ul.order-list li div svg {
+    color: #1771e6;
+    background-color: #ecf1f7;
+    border-radius: 50%;
+    min-height: 32px;
+    min-width: 32px;
+    padding: 5px;
+    margin-right: 5px;
+}
+
+ul.order-list li div p {
+    font-weight: 900;
+}
+
+ul.order-list li p {
+    margin-bottom: 0;
 }
 
 ul.order-list li a {
     color: #0d6efd!important;
     cursor: pointer!important;
 }
+
+.sale-block {
+    border: 1px solid #dadcdc;
+    border-radius: 5px;
+    padding: 20px;
+    width: 50%;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+}
+
+.sale-block-one {
+    display: flex;
+    align-items: flex-start;
+}
+
+.sale-block-one div {
+    padding-right: 15px;
+}
+
+.sale-block-one div h5 {
+    color: #444;
+}
+
+sale-block-one div p {
+    color: #777;
+}
+
+.sale-block-one svg {
+    color: #1771e6;
+    border: 2px dashed #1771e6;
+    border-radius: 50%;
+    background: #ecf1f7;
+    width: 70px;
+    padding: 5px;
+}
+
+.sale-block-two a {
+    color: #1771e6!important;
+    cursor: pointer;
+    background: #ecf1f7;
+    border-radius: 5px;
+    padding: 10px 15px;
+}
+
+.sale-block-two {
+    padding-top: 10px;
+    height: 50px;
+}
+
 /* Переключатель на тудушке */
 
 
@@ -276,6 +374,61 @@ ul.order-list li a {
     .form-block {
         border-radius: 0;
     }
+
+    ul.order-list {
+        padding-left: 0;
+    }
+    
+    ul.order-list li {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        padding: 20px 15px;
+        transition: all .3s;
+    }
+    
+    ul.order-list li:hover {
+        background: #f0f0f0;
+        border-radius: 10px;
+        transition: all ease .3s;
+    }
+    
+    ul.order-list li div {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    ul.order-list li div svg {
+        color: #1771e6;
+        background-color: #ecf1f7;
+        border-radius: 50%;
+        min-height: 32px;
+        min-width: 32px;
+        padding: 5px;
+    }
+
+    ul.order-list li div p {
+        width: 100%;
+    }
+    
+    ul.order-list li p {
+        margin-bottom: 0;
+    }
+    
+    ul.order-list li a {
+        color: #0d6efd!important;
+        cursor: pointer!important;
+        border: 1px solid #1771e6;
+        border-radius: 5px;
+        padding: 5px;
+    }
+
+    .sale-block {
+        width: 100%;
+    }
+    
   }
   
   /* Для устройств с шириной от 577px до 768px (планшеты в портретной ориентации) */
