Изменил всю верстку

--- a/xsolution/src/styles/main.css
+++ b/xsolution/src/styles/main.css
@@ -6,11 +6,15 @@
 /* Переменные */
 :root {
     /* Light mode */
+    --white: #fff;
     --page-bg: #f6f7f8;
     --text-color: #222;
     --card-bg: #fff;
     --input-bg: #ecf1f7;
     --yellow: #ffdd2d;
+
+
+    --shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     /* Light mode */
 }
 
@@ -18,24 +22,13 @@
     /* Dark mode */
     --page-bg: #212121;
     --text-color: #fff;
+
+    --shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     /* Dark mode */
 }
 /* Переменные */
 
 /* Общие стили */
-#root {
-    height: 100vh;
-    overflow-y: scroll;
-    padding-bottom: 140px;
-}
-
-.app {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
-}
-
 ::selection {
     background: rgba(255,221,45,.32)!important;
     color: rgba(0,0,0,.8)!important;
@@ -47,7 +40,6 @@ html, body {
     font-family: 'Play', sans-serif!important;
     background-color: var(--page-bg);
     color: var(--text-color);
-    height: 100vh;
 }
 
 h2 {
@@ -75,20 +67,79 @@ h6 {
     font-weight: 700;
 }
 
+
+/* Общие стили для всех экранов */
+/* Шапка */
+.navbar {
+    box-shadow: var(--shadow);
+}
+
+.logo-img {
+    width: 200px;
+    min-width: 200px;
+    height: auto;
+}
+
+.profile-img {
+    width: 32px;
+    min-width: 32px;
+    height: 32px;
+    border-radius: 10px;
+}
+
+.dropdown-toggle {
+    display: flex;
+    align-items: center;
+}
+
+.profile-name {
+    padding-right: 5px;
+    margin-bottom: 0;
+}
+
+button.dropdown-toggle,
+button.dropdown-toggle.show,
+button.dropdown-toggle:hover,
+button.dropdown-toggle:active {
+    background: unset!important;
+    border: none!important;
+    color: #333!important;
+    box-shadow: none!important;
+}
+.dropdown-menu {
+    border: none;
+    border-radius: 15px;
+    padding: 15px 0;
+}
+a.dropdown-item:active {
+    background: #ffdd2d;
+    color: #333;
+    border-radius: 10px;
+}
+a.dropdown-item:hover {
+    border-radius: 10px;
+}
+
+.navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+/* Шапка */
+
 .form-block {
     background-color: #fff;
     padding: 20px;
-    margin: 0 auto;
     max-width: 1140px;
     border-top: 5px solid #333;
     border-radius: 25px;
-    -webkit-box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
-    -moz-box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
-    box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
+    -webkit-box-shadow: 0 7px 8px 0 rgba(34, 60, 80, 0.2);
+    -moz-box-shadow: 0 7px 8px 0 rgba(34, 60, 80, 0.2);
+    box-shadow: 0 7px 8px 0 rgba(34, 60, 80, 0.2);
     margin-bottom: 20px;
 }
 
-/* Общие стили */
+
 
 .btn-warning {
     background: #ffdd2d;
@@ -97,7 +148,7 @@ h6 {
     border: none;
 }
 
-/* Кастомные инпуты */
+
 .custom-input-main {
     background: #ecf1f7;
     box-shadow: none!important;
@@ -128,8 +179,7 @@ label.form-label::after, select.custom-input-main:focus + label.form-label::afte
     border-radius: 10px;
 }
 
-/* Кастомные инпуты */
-/* Прогрессбар */
+
 .progress {
     height: 8px;
 }
@@ -153,22 +203,20 @@ div.progress-bar {
     font-weight: 900;
     font-size: 24px;
 }
-/* Прогрессбар */
 
 
-/* Кастомные радиокнопки */
 span.main-radio-span {
     display: flex;
     flex-direction: column;
-    
-  }
-  
+
+}
+
 label {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row-reverse;
-  border: 1px solid #d9d9da;
-  padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    border: 1px solid #d9d9da;
+    padding: 10px 20px;
 }
 
 .main-radio-span-one {
@@ -179,47 +227,47 @@ label {
 .main-radio-span-two {
     border-radius: 0 0 10px 10px;
 }
-  
-  /* Стили для неотмеченных радиокнопок */
+
+
 input[type="radio"] {
-  /* Убираем стандартные бордеры */
-  border: none;
-  /* Задаем серый цвет фона */
-  background-color: #ecf1f7;
-  /* Задаем размеры и форму кнопки (можно настраивать по желанию) */
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  /* Убираем стандартный внутренний отступ */
-  padding: 0;
-  /* Скрываем оригинальную радиокнопку */
-  appearance: none;
-  -webkit-appearance: none;
-  transition: all .6s ease;
+
+    border: none;
+
+    background-color: #ecf1f7;
+
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+
+    padding: 0;
+
+    appearance: none;
+    -webkit-appearance: none;
+    transition: all .6s ease;
 }
 
-/* Стили для отмеченных радиокнопок */
+
 input[type="radio"]:checked {
-  /* Добавляем желтый бордер */
-  background: #333;
-  border: 4px solid #ffdd2d;
-  
-  transition: background .6s ease;
+
+    background: #333;
+    border: 4px solid #ffdd2d;
+
+    transition: background .6s ease;
 }
 
-/* Скрытие стандартной внутренней точки в радиокнопке */
+
 input[type="radio"]::before {
-  content: "";
-  display: block;
-  /* Задаем черный цвет точки */
-  background-color: #333;
+    content: "";
+    display: block;
+
+    background-color: #333;
 }
 
-/* Скрытие стандартного внешнего кружка радиокнопки */
+
 input[type="radio"]::after {
-  content: none;
+    content: none;
 }
-/* Кастомные радиокнопки */
+
 
 ul.nav.nav-tabs {
     border: none;
@@ -240,7 +288,7 @@ ul.nav.nav-tabs li.nav-item button.active{
     background: #f6f7f8;
     border-radius: 5px;
 }
-/* Скрываем стандартную кнопку */
+
 
 ul.order-list {
     padding-left: 0;
@@ -312,7 +360,7 @@ ul.order-list li a {
     color: #444;
 }
 
-sale-block-one div p {
+.sale-block-one div p {
     color: #777;
 }
 
@@ -338,40 +386,453 @@ sale-block-one div p {
     height: 50px;
 }
 
-/* Переключатель на тудушке */
+.file-btn {
+    width: 100%;
+    height: 150px;
+    font-size: 18px;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    color: #333;
+    background-color: #ecf1f7;
+    border-radius: 20px;
+    cursor: pointer;
 
+}
 
+.file-btn.dragging {
+    border-color: #8A3FFC;
+    background-color: #f3ecff;
+}
 
+.file-btn:hover {
+    background-color: #fff;
+    border: 2px dashed #333;
+}
 
+.file-btn span {
+    font-size: 24px;
+    color: #333;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 25px;
+}
 
+.selected-file {
+    display: flex;
+    align-items: center!important;
+    justify-content: space-between;
+    background-color: #ecf1f7;
+    border-radius: 10px;
+    margin-top: 15px;
+    padding: 10px 5px;
+}
 
+.selected-file p {
+    font-size: 13px;
+    margin-bottom: 0;
+}
 
+.selected-file button {
+    padding: 3px 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #333;
+    background-color: transparent;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-size: 12px;
+}
 
+.selected-file button:hover {
+    color: #fff;
+    background-color: red;
+}
 
+.main-text-upload {
+    text-align: center;
+}
 
+.header-padding {
+    border-radius: 5px;
+    padding: 10px;
+    height: calc(100vh - 146px);
+}
 
+.profile p {
+    margin-right: 10px;
+    margin-bottom: 0;
+}
 
+.main-chat-div {
+    min-height: 100vh;
+    position: relative;
+    background: #fff;
+    padding-top: 80px;
+    overflow-y: scroll;
+}
 
+.chat-header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    padding: 20px 10px;
+    background: #fff;
+    z-index: 1;
+}
 
+.chat-header .svg-close {
+    width: 26px;
+}
 
+.chat-header h4 {
+    margin: 0;
+}
 
+.chats-header-logo {
+    display: flex;
+    align-items: center;
+}
 
+.chats-header-logo svg {
+    width: 18px;
+    color: grey;
+}
 
+.chats-header-logo img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin: 0 10px;
+}
 
+.link-chat-p {
+    margin-bottom: 0;
+}
 
+.chat-body {
+    border-radius: 5px;
+    padding: 10px;
+    overflow-y: scroll;
 
+}
 
+.chat-footer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: #fff;
+    position: fixed;
+    bottom: 0;
+}
 
+.chat-file, .chat-send {
+    width: 15%;
+}
 
+.chat-input {
+    width: 70%;
+}
 
+.chat-file svg {
+    padding: 5px;
+    width: 40px;
+    color: grey;
+    background: #f6f7f8;
+    border-radius: 50%;
+}
 
+.chat-input input {
+    background: #f6f7f8;
+    height: 40px;
+    width: 100%;
+    border-radius: 25px;
+    padding-left: 10px;
+}
 
+.chat-send {
+    text-align: right;
+}
 
+.chat-send svg {
+    padding: 5px;
+    width: 40px;
+    background: #c4ddfc;
+    color: #fff;
+    border-radius: 50%;
+}
 
+.message-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
 
-/* Адаптация */
-/* Для устройств с шириной 576px и менее (мобильные устройства портретной ориентации) */
-@media (max-width: 576px) {
+.message {
+    margin-bottom: 10px;
+}
+
+.message.user {
+    text-align: right;
+}
+
+.message.other {
+    text-align: left;
+}
+
+.message-text {
+    background-color: #f0f0f0;
+    border-radius: 15px;
+    padding: 8px 12px;
+    display: inline-block;
+    max-width: 70%;
+}
+
+.message-timestamp {
+    font-size: 0.8em;
+    color: #999;
+}
+
+@media (min-width: 769px) {
+    .main-chat-div {
+        padding-top: 0;
+    }
+}
+
+.main-profile-block {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+
+.main-profile-block .dop-block {
+    display: flex;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.main-profile-block .dop-block img {
+    width: 96px;
+    height: auto;
+    border-radius: 50%;
+    margin-right: 30px;
+}
+
+.main-profile-block a {
+    color: #333;
+    background: #ffdd2d;
+    padding: 10px 15px;
+    height: 45px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-radius: 10px;
+}
+
+.btn-outline-success {
+    border: 1px solid #00b92d;
+    background: #f6f7f8!important;
+}
+
+.btn-outline-success:hover {
+    background: #e2eee7 !important;
+}
+
+.profile-container {
+    padding-bottom: 70px;
+}
+
+.chats-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px 10px;
+}
+
+.chats-header svg {
+    width: 26px;
+}
+
+.chats-header h4 {
+    margin: 0;
+}
+
+.chat-list {
+    padding: 0;
+}
+
+.chat-item {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    padding: 10px;
+}
+
+.chat-link {
+    width: 100%;
+}
+
+.chat-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.chat-details {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.chat-details-span {
+    display: flex;
+    justify-content: space-between;
+}
+
+.chat-name {
+    font-weight: bold;
+    color: #333;
+}
+
+.last-message {
+    color: #666;
+}
+
+.last-message-date {
+    color: #999;
+    font-size: 0.8em;
+}
+/* Общие стили для всех экранов */
+
+/* Стили для мобильных устройств */
+@media (max-width: 768px) {
+    /* Шапка */
+    .navbar-nav {
+        display: none;
+    }
+    .profile-name {
+        display: none;
+    }
+    .dropdown-menu[data-bs-popper] {
+        left: -130%!important;
+        right: 100%;
+    }
+    /* Шапка */
+
+    /* Мобильное меню */
+    .mobile-menu {
+        background: #fff;
+    }
+
+    ul.logo-nav-wrapper {
+        margin: 0;
+        padding: 0;
+    }
+
+    div.mobile-menu {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        border-top: 1px solid #dddcdc;
+        z-index: 999;
+    }
+
+    div.mobile-menu ul.logo-nav-wrapper li {
+        text-align: center;
+        margin-right: 0;
+        width: 20%;
+        min-height: 52px;
+        margin-top: 5px;
+    }
+
+    div.mobile-menu ul.logo-nav-wrapper li a svg {
+        width: 28px;
+        color: #111;
+        opacity: .4;
+    }
+
+    div.mobile-menu ul.logo-nav-wrapper li a.active svg {
+        color: #336fee;
+        border-radius: 50%;
+        opacity: .8;
+    }
+
+    div.mobile-menu ul.logo-nav-wrapper li a .mobile-menu-text {
+        color: #111;
+        opacity: .4;
+        font-size: 11px;
+    }
+
+    div.mobile-menu ul.logo-nav-wrapper li a.active .mobile-menu-text {
+        color: #336fee;
+        opacity: .8;
+    }
+
+    .mobile-menu-text {
+        margin-bottom: 0;
+    }
+    .logo-nav-wrapper {
+        display: flex!important;
+        justify-content: space-between!important;
+        align-items: center!important;
+    }
+
+    ul.logo-nav-wrapper {
+        margin-bottom: 0;
+    }
+
+    ul.logo-nav-wrapper li.main-nav-li {
+        margin-right: 15px;
+    }
+
+    ul.logo-nav-wrapper li.main-nav-li a {
+        cursor: pointer;
+        transition: color .6s ease;
+        color: #7c7d7d;
+    }
+
+    ul.logo-nav-wrapper li.main-nav-li a.active {
+        color: #333;
+        border-bottom: 2px solid #333;
+        padding-bottom: 29px;
+        transition: color .6s ease;
+    }
+
+    ul.logo-nav-wrapper li.main-nav-li a:hover {
+        color: #777;
+        border-bottom: 2px solid #777;
+        padding-bottom: 29px;
+        transition: color .6s ease;
+    }
+    /* Мобильное меню */
+
+    /* Содержимое между шапкой и мобильным меню */
+    html, body, #root, .app {
+        overflow-y: hidden;
+    }
+
+    .header-padding {
+        margin-top: 80px;
+        padding-bottom: 57px;
+        overflow-y: scroll;
+        min-height: 50vh;
+    }
+    /* Содержимое между шапкой и мобильным меню */
+
     .form-block {
         border-radius: 0;
     }
@@ -379,7 +840,7 @@ sale-block-one div p {
     ul.order-list {
         padding-left: 0;
     }
-    
+
     ul.order-list li {
         display: flex;
         justify-content: space-between;
@@ -388,19 +849,19 @@ sale-block-one div p {
         padding: 20px 15px;
         transition: all .3s;
     }
-    
+
     ul.order-list li:hover {
         background: #f0f0f0;
         border-radius: 10px;
         transition: all ease .3s;
     }
-    
+
     ul.order-list li div {
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
-    
+
     ul.order-list li div svg {
         color: #1771e6;
         background-color: #ecf1f7;
@@ -413,11 +874,11 @@ sale-block-one div p {
     ul.order-list li div p {
         width: 100%;
     }
-    
+
     ul.order-list li p {
         margin-bottom: 0;
     }
-    
+
     ul.order-list li a {
         color: #0d6efd!important;
         cursor: pointer!important;
@@ -429,27 +890,21 @@ sale-block-one div p {
     .sale-block {
         width: 100%;
     }
-    
-  }
-  
-  /* Для устройств с шириной от 577px до 768px (планшеты в портретной ориентации) */
-  @media (min-width: 577px) and (max-width: 768px) {
-    
-  }
-  
-  /* Для устройств с шириной от 769px до 992px (планшеты в альбомной ориентации и небольшие ноутбуки) */
-  @media (min-width: 769px) and (max-width: 992px) {
-    
-  }
-  
-  /* Для устройств с шириной от 993px до 1200px (стандартные ноутбуки и настольные мониторы) */
-  @media (min-width: 993px) and (max-width: 1200px) {
-    
-  }
-  
-  /* Для устройств с шириной 1201px и более (большие настольные мониторы и широкоэкранные устройства) */
-  @media (min-width: 1201px) {
-    
-  }
-/* Адаптация */
+}
 
+/* Стили для планшетов и десктопов */
+@media (min-width: 769px) {
+    .dropdown-menu[data-bs-popper] {
+        left: -30%!important;
+        right: 100%;
+    }
+
+    .mobile-menu {
+        display: none;
+    }
+
+    .header-padding {
+        margin-top: 80px;
+        min-height: calc(100vh - 137px);
+    }
+}
